--- a/_config.yml
+++ b/_config.yml
@@ -137,24 +137,22 @@ author:
 
 # Site Footer
 footer:
-  links:
+   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "anais.mejia_at_colostate.edu"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url:
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url:
+      # url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
-    - label: "GitLab"
-      icon: "fab fa-fw fa-gitlab"
-      # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
-    - label: "Instagram"
+      # url: "https://github.com/"
+    - label: "LinkedIn"
       icon: "fab fa-fw fa-instagram"
+      url: "https://www.linkedin.com/in/anais-mejia"
       # url:
 
 
