--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "meekrobial Anais Mejia Solorzano Website "
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Anais Mejia-Solorzano"
-description              : "Peruvian scientist in progress (Always learning)."
-url                      : "https://anaismejias.github.io/"
+name                     : "meekrobial Anais Mejia-Solorzano"
+description              : "meekrobial Peruvian scientist in progress (Always learning)."
+url                      : "https://meekrob.github.io/AnaisMejiaS.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
